adds updated site configuration

--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,13 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
+#theme: minima
+# theme: awesome-jekyll-theme
 plugins:
   - jekyll-feed
+
+# awesome-jekyll-theme settings
+typewriter_effect: false
 
 # Exclude from processing.
 # The following items will not be processed, by default.
