updates links, images, styles, qr codes

--- a/_data/registry-links.yml
+++ b/_data/registry-links.yml
@@ -1,12 +1,6 @@
 - name: Amazon
   url: https://www.amazon.com/baby-reg/nate-fischer-jay-fredlund-december-2025-seattle/3NWGE79D8GEDN
   image: /assets/images/amazon.png
-- name: Room & Board
-  url: https://www.roomandboard.com/
+- name: Pottery Barn Kids
+  url: https://www.potterybarnkids.com/registry/s5ww25t6dd/registry-list.html
   image: /assets/images/room-and-board.png
-- name: PayPal
-  url: https://www.paypal.com/paypalme/jayfredlund
-  image: /assets/images/paypal.png
-- name: Venmo
-  url: https://venmo.com/jayfredlund
-  image: /assets/images/venmo.png
